modules/network/2-igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = var.igw_name
  }

  depends_on = [ 
    aws_vpc.vpc
  ]

}
