modules/network/4-epi.tf
resource "aws_eip" "eip1" {
  domain = "vpc"

  tags = {
    Name = "${var.eip_name}-a"
  }

  depends_on = [ aws_internet_gateway.igw ]
}

resource "aws_eip" "eip2" {
  domain = "vpc"

  tags = {
    Name = "${var.eip_name}-a"
  }

  depends_on = [ aws_internet_gateway.igw ]
}
